--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-redux": "5.0.7",
     "react-redux-form": "1.16.8",
     "react-router-dom": "4.2.2",
+    "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "4.0.0",
     "reactstrap": "5.0.0",
     "redux": "3.7.2",
