--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "bootstrap": "4.0.0",
     "bootstrap-social": "5.1.1",
     "font-awesome": "4.7.0",
+    "prop-types": "^15.6.0",
     "react": "^17.0.1",
+    "react-animation-components": "^3.0.0",
     "react-dom": "^17.0.1",
     "react-popper": "0.9.2",
     "react-redux": "5.0.7",
@@ -18,6 +20,7 @@
     "react-router-dom": "4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "4.0.0",
+    "react-transition-group": "2.3.0",
     "reactstrap": "5.0.0",
     "redux": "3.7.2",
     "redux-logger": "3.0.6",
